<resources>
    <string name="app_name">Cooking Time</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_fragment_dashboard">Settings dashboard</string>

    <!--Strings related to the ToolBar-->
    <string name="title_dashboard_fragment">Dashboard</string>
    <string name="title_groups_fragment">Groups</string>
    <string name="title_contacts_fragment">Contacts</string>
    <string name="title_search_fragment">Search</string>
    <string name="title_favourite_fragment">Favourites</string>
    <string name="title_settings_fragment">Settings</string>
    <string name="title_twitter_fragment">Twitter</string>
    <string name="title_donate_fragment">Donate</string>
    <string name="title_about_fragment">About</string>

    <!-- Dashboard fragment -->
    <string name="dashboard_fragment_friends">Friends</string>
    <string name="dashboard_fragment_search">Search recipes</string>
    <string name="dashboard_fragment_fav">Favourite recipes</string>
</resources>
