<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mSearchNavigation"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/title_search_fragment" />
        <item
            android:id="@+id/mDashboardNavigation"
            android:icon="?attr/homeAsUpIndicator"
            android:title="@string/title_dashboard_fragment" />
        <item
            android:id="@+id/mGroupsNavigation"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/title_groups_fragment" />
        <item
            android:id="@+id/mContacsNavigation"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/title_contacts_fragment" />
        <item
            android:id="@+id/mFavouriteNavigation"
            android:icon="@android:drawable/btn_star"
            android:title="@string/title_favourite_fragment" />
        <item
            android:id="@+id/mSettingsNavigation"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/title_settings_fragment" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/mTwitterNavigation"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/title_twitter_fragment" />
            <item
                android:id="@+id/mDonateNavigation"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/title_donate_fragment" />
            <item
                android:id="@+id/mAboutNavigation"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/title_about_fragment" />
        </menu>
    </item>

</menu>
