<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">



<Button
    android:id="@+id/button_search"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:layout_weight="1"
    android:onClick="button_click"
    android:text="@string/dashboard_fragment_search"
    android:background="@drawable/boton"
    android:textColor="@color/buttoncolors" />

<Button
    android:id="@+id/button_friends"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:layout_weight="1"
    android:onClick="button_click"
    android:text="@string/dashboard_fragment_friends"
    android:background="@drawable/boton"
    android:textColor="@color/buttoncolors" />

<Button
    android:id="@+id/button_favourite"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:onClick="button_click"
    android:text="@string/dashboard_fragment_fav"
    android:background="@drawable/boton"
    android:textColor="@color/buttoncolors" />
</LinearLayout>